--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,10 @@ install:
 
   - mvn -N io.takari:maven:wrapper
 
-  - ./mvnw install
+  - ./mvnw install -Pdev
 
 
 script:
 
-  mvn clean install -Pdev
+  #mvn clean install -Pdev
+  mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install -Pdev sonar:sonar
