--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,4 @@ install:
 
 script:
 
-  #mvn clean install -Pdev
-  mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install -Pdev sonar:sonar
+  mvn clean install -Pdev
