--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springframework</groupId>
-    <artifactId>edulife</artifactId>
+    <artifactId>edulife_tg2a-5</artifactId>
     <version>1.0</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
+        <name>sweiproject-tg2a-5</name>
         <version>1.5.7.RELEASE</version>
     </parent>
 
